make sure text boxes have some padding so they don't look cramped

--- a/app/assets/stylesheets/controllers/projects.css.sass
+++ b/app/assets/stylesheets/controllers/projects.css.sass
@@ -44,6 +44,13 @@
       
       
   &#edit-template
-    #project-details, #radials, #questions
-      @include page-section
+    #project-details
+      @include module
+      
+      form
+        width: 50%
+      
+  
+    #radials, #questions
+      @include module
     
