--- a/app/assets/stylesheets/controllers/suggestions.css.sass
+++ b/app/assets/stylesheets/controllers/suggestions.css.sass
@@ -36,12 +36,5 @@
       margin: 5px
     
     .field
-      input
-        @include border
-        width: 100%
-        height: 20px
-  
-      textarea
-        @include border
-        width: 100%
-        height: 75px
+      width: 96.5% // Can't use 100% because there's padding in the inputs.
+    
