--- a/app/assets/stylesheets/global.css.sass
+++ b/app/assets/stylesheets/global.css.sass
@@ -4,3 +4,20 @@
 body
   margin: 0px
   background: $sand-lightened-10
+
+
+.field
+  label
+    font-weight: bold
+
+  input
+    @include border
+    @include padded
+    width: 100%
+    height: 20px
+
+  textarea
+    @include border
+    @include padded
+    width: 100%
+    height: 75px
